Test Bootstrap Button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
   <h1>Welcome to {{ title }}!!</h1>
   ... Starter Files ...
 </div>
+<button class="btn btn-primary">Test</button>
+
 <pm-products></pm-products>
