--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -30,9 +30,9 @@
             <th>5 Star Rating</th>
           </tr>
         </thead>
-        <!--
+
         <tbody>
-          <tr *ngFor="let product of filteredProducts">
+         <!-- <tr *ngFor="let product of filteredProducts">
             <td>
               <img
                 *ngIf="showImage"
@@ -55,8 +55,8 @@
                        (ratingClicked)='onRatingClicked($event)'>
               </pm-star>
             </td>
-          </tr>
-        </tbody> -->
+          </tr> -->
+        </tbody>
       </table>
     </div>
   </div>
