--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -15,7 +15,8 @@
       </div>
     </div>
     <div class="table-responsive">
-      <table class="table" *ngIf="products.length">
+      <!-- TODO: Update ngIf  -->
+      <table class="table" *ngIf="!products.length">
         <thead>
           <tr>
             <th>
