--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-2">Filter by:</div>
       <div class="col-md-4">
-        <!--<input type="text" [(ngModel)]="listFilter" />-->
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
     <div class="row" *ngIf="listFilter">
@@ -15,7 +15,6 @@
       </div>
     </div>
     <div class="table-responsive">
-      <!-- TODO: Update ngIf  -->
       <table class="table" *ngIf="products.length">
         <thead>
           <tr>
