--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -50,7 +50,7 @@
               </a>
               -->
             </td>
-            <td>{{ product.productCode | lowercase | convertToSpaces:'-' }}</td>
+            <td>{{ product.productCode | lowercase | convertToSpacesPipe:'-' }}</td>
             <td>{{ product.releaseDate }}</td>
             <td>{{ product.price | currency : "USD" : "symbol" : "1.2-2" }}</td>
             <td>
